docs/api/qiskit/0.26/result.md
---
title: result
description: API reference for qiskit.result
in_page_toc_min_heading_level: 1
python_api_type: module
python_api_name: qiskit.result
---

<span id="module-qiskit.result" />

<span id="qiskit-result" />

# Experiment Results

<span id="module-qiskit.result" />

`qiskit.result`

|                                                                                                                    |                                                                      |
| ------------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------- |
| [`Result`](qiskit.result.Result "qiskit.result.Result")(backend\_name, backend\_version, …\[, …])                  | Model for Results.                                                   |
| [`ResultError`](qiskit.result.ResultError "qiskit.result.ResultError")(error)                                      | Exceptions raised due to errors in result output.                    |
| [`Counts`](qiskit.result.Counts "qiskit.result.Counts")(data\[, time\_taken, creg\_sizes, …])                      | A class to store a counts result from a circuit execution.           |
| [`marginal_counts`](qiskit.result.marginal_counts "qiskit.result.marginal_counts")(result\[, indices, inplace, …]) | Marginalize counts from an experiment over some indices of interest. |

## Distributions

|                                                                                                          |                                                          |
| -------------------------------------------------------------------------------------------------------- | -------------------------------------------------------- |
| [`ProbDistribution`](qiskit.result.ProbDistribution "qiskit.result.ProbDistribution")(data\[, shots])    | A generic dict-like class for probability distributions. |
| [`QuasiDistribution`](qiskit.result.QuasiDistribution "qiskit.result.QuasiDistribution")(data\[, shots]) | A dict-like class for representing qasi-probabilities.   |

